--- a/docs/ESDG_jacobian/refs.bib
+++ b/docs/ESDG_jacobian/refs.bib
@@ -1,3 +1,11 @@
+@inproceedings{cuthill1969reducing,
+  title={Reducing the bandwidth of sparse symmetric matrices},
+  author={Cuthill, Elizabeth and McKee, James},
+  booktitle={Proceedings of the 1969 24th national conference},
+  pages={157--172},
+  year={1969}
+}
+
 @inproceedings{persson2006efficient,
   title={{An efficient low memory implicit DG algorithm for time dependent problems}},
   author={Persson, Per-Olof and Peraire, Jaime},
